2008-08-28  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx, test/test085.cxx,
 test/unit/test_prepared_statement.cxx:
  - Re-branded test085 as a unit test
 include/pqxx/transaction_base.hxx, sr/transaction_base.cxx:
  - New function activate() for explicit bracketing
  - Activate before executing prepared statement, thanks qelo
2008-08-27  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/compiler-public.hxx:
  - Apply PQXX_AUTOLINK to static link as well, thanks Kirit
2008-08-25  Jeroen T. Vermeulen <jtv@xs4all.nl>
 include/pqxx/connection_base.hxx:
  - Export encrypt_password, thanks boto
2008-08-23  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test_helpers.hxx:
  - Fixed nested template syntax, thanks Bjorn Munch
2008-08-19  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test000.cxx, test/test001.cxx, test/test002.cxx, test/test004.cxx,
 test/test006.cxx, test/test007.cxx, test/test020.cxx, test/test023.cxx,
 test/test075.cxx, test/test079.cxx, test/test084.cxx, test/test087.cxx,
 test/test089.cxx, test/test092.cxx, test/test094.cxx:
  - Replaced throws with test helpers.
 test/unit/test_sql_cursor.cxx:
  - Fixed test failure that only showed up on older gcc versions
 win32/vc-test.mak.template:
  - First stab at adjusting to new test configuration
2008-08-15  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/Makefile.am.template, test/runner.cxx, test/test027.cxx,
 test/test028.cxx, test/test029.cxx, test/test039.cxx, test/test_helpers.hxx,
 test/unit/Makefile.am.template, test/unit/runner.cxx:
  - Missed some spots in converting to test framework
  - Run all tests in directory as single program!
  - Test build & run now 20% faster on my laptop
  - Should be easier to build tests with Visual C++'s stupid project files
2008-08-14  Jeroen T. Vermeulen <jtv@xs4all.nl>
 test/test072.cxx, test/test073.cxx, test/test074.cxx, test/test075.cxx,
 test/test076.cxx, test/test077.cxx, test/test078.cxx, test/test079.cxx,